--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
+ErrorDocument 404 https://MiPaginaPersonal/404.php
+ErrorDocument 404 https://localhost/MiPaginaPersonal/404.php
+ErrorDocument 404 https://localhost/404.php
 ErrorDocument 404 https://davidadrian8ag.netlify.app/404.php
