--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,7 @@ ErrorDocument 404 https://MiPaginaPersonal/404.php
 ErrorDocument 404 https://localhost/MiPaginaPersonal/404.php
 ErrorDocument 404 https://localhost/404.php
 ErrorDocument 404 https://davidadrian8ag.netlify.app/404.php
+ErrorDocument 404 https://MiPaginaPersonal/404.html
+ErrorDocument 404 https://localhost/MiPaginaPersonal/404.html
+ErrorDocument 404 https://localhost/404.html
+ErrorDocument 404 https://davidadrian8ag.netlify.app/404.html
